# Nockchain

./: .env.revenue  .eslintrc.js  .gitignore  21_agent_deployment_verification_report.md  AI_AGENT_PROTOCOL.md  AI_MASTER_PROTOCOL.md  CLAUDE.md  ENTERPRISE_READINESS_CERTIFICATION.md  EXPORT_GUIDE.md  LOAD_TESTING_FRAMEWORK.md  LOCAL_DEVELOPMENT_SETUP_PLAN.md  NOCKCHAIN_OPTIMIZATION_INTEGRATION_COMPLETE.md  PERFORMANCE_OPTIMIZATION_REPORT.md  Projectplan.md  README.md  REVENUE_SYSTEM.md  cicd-comprehensive-failure-analysis.md  cicd-investigation-summary.md  complete-agent-intelligence-final-export.json  complete-handoff-package.json  create_smart_export.py  docker-compose.production.yml  docker-compose.revenue.yml  docker-compose.yml  jest.config.js  kimi_chat.py  messages.html  nockchain-handover-complete-v2.json  nockchain-project-plan-v2-final.json  nockchain-repository-structure-verification.md  nockchain_21_agent_intelligence_export.json  nockchain_chat.json  nockchain_smart_export_20250718_121809.json  nockchain_telegram_analysis.md  package-lock.json  package.json  pnpm-workspace.yaml  turbo.json
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
.nockchain/cache/: update-log.txt
.nockchain/scripts/: claude-context.sh  update-repo-navigator.sh
.turbo/daemon/: c3cc4216315cd29e-turbo.log.2025-07-19
agents/: AUTONOMOUS_AGENT_ARMY_DEPLOYMENT_COMPLETE.md  CROSS_AGENT_COLLABORATION_PROTOCOLS.md  EXPERT_PROMPT_AGENT_DEPLOYMENT_COMPLETE.md  README.md  START_AUTONOMOUS_EXECUTION.ts
agents/config/: config.json
apps/bridge-revenue/: Cargo.toml  Dockerfile
apps/bridge-revenue/src/fees/: collector.rs
apps/mining-pool/: Cargo.toml
apps/mining-pool/src/: config.rs  main.rs  payout_engine.rs  share_processor.rs  websocket.rs
apps/mining-pool/src/algorithms/: difficulty_adjustment.rs
apps/mining-pool/src/core/: zkvm_optimizations.rs
apps/mining-pool/src/mining/: mod.rs
apps/mining-pool/src/services/: mining_service.rs
apps/nock-analytics/: Cargo.toml
apps/nock-analytics/src/: main.rs
apps/nock-analytics/src/analytics/: mod.rs
apps/nock-analytics/templates/: dashboard.html
apps/nock-mobile/: Cargo.toml
apps/nock-mobile/src/: main.rs
apps/nock-mobile/src/eon/: mod.rs
apps/nock-mobile/src/mining/: mod.rs
apps/nock-optimizer/: Cargo.toml
apps/nock-optimizer/src/: lib.rs
apps/nock-optimizer/src/ai/: mod.rs  trading_strategies.rs
apps/nock-optimizer/src/bridge/: advanced_nock_bridge.rs  mod.rs
apps/nock-optimizer/src/difficulty/: eon_difficulty_predictor.rs
apps/nock-optimizer/src/dwords/: zk_dwords_optimizer.rs
apps/nock-optimizer/src/mining/: eon-aware-optimizer.rs
apps/nock-optimizer/src/ml/: mining_predictor.rs
apps/nock-optimizer/src/namespace/: storage_optimizer.rs
apps/nock-optimizer/src/proof_power/: nock_proof_optimizer.rs
apps/nock-testing/: Cargo.toml
apps/nock-testing/src/: main.rs
apps/nock-testing/src/integration_tests/: mod.rs
apps/nock-testing/src/performance_tests/: mod.rs
apps/nock-testing/src/unit_tests/: mod.rs
apps/performance-optimizer/: Cargo.toml  README.md
apps/performance-optimizer/src/: api_optimizer.rs  database_optimizer.rs  lib.rs  main.rs  memory_optimizer.rs  network_optimizer.rs
apps/revenue-engine/: Cargo.toml  Dockerfile
apps/revenue-engine/src/: analytics.rs  billing.rs  bridge.rs  core.rs  enterprise.rs  lib.rs  main.rs  subscription.rs
apps/solana-bridge/programs/nock-bridge/: Cargo.toml
apps/solana-bridge/programs/nock-bridge/src/: lib.rs
apps/solana-bridge/programs/nock-bridge/src/instructions/: liquidity.rs  mod.rs
apps/solana-bridge/programs/nock-bridge/src/state/: mod.rs  oracle.rs
branding/: README.md
complete-agent-intelligence/: 21_AGENT_COORDINATION_FRAMEWORK.md  AGENT_INTELLIGENCE_SUMMARY.md  APAC_REGULATORY_FRAMEWORKS.md  AUTOMATED_EMAIL_SYSTEM.md  AUTOMATED_KYC_AML_SYSTEM.md  AUTONOMOUS_EXECUTION_SUMMARY.md  AUTONOMOUS_SALES_SYSTEM.md  CLAUDE_CLIENT_HANDOFF_2025.md  COMPREHENSIVE_SECURITY_AUDIT.md  CONTENT_AUTOMATION_DISTRIBUTION_SYSTEM.md  CONTENT_EDUCATION_EXECUTIVE_SUMMARY.md  DEFI_PROTOCOL_COMPLIANCE_FRAMEWORK.md  ECOSYSTEM_SUMMARY.md  EU_MICA_COMPLIANCE.md  EXPERT_PROMPT_AGENT_DEPLOYMENT.md  GLOBAL_REGULATORY_MONITORING.md  INCIDENT_RESPONSE_PLAN.md  MASTER_CONVERSION_FUNNEL.md  MINING_POOL_COMPLIANCE_FRAMEWORK.md  NOCK_MINING_MASTERY_ACADEMY.md  README.md  REGULATORY_COMPLIANCE_MASTER_FRAMEWORK.md  SEO_DOMINATION_STRATEGY.md  SOCIAL_MEDIA_DOMINATION_STRATEGY.md  TRANSACTION_MONITORING_ENGINE.md  UPDATED_AGENT_INTELLIGENCE_2025.md  US_LICENSING_APPLICATIONS.md  WEBINAR_WORKSHOP_SERIES.md  ZKPOW_EXPERT_PROMPT_LIBRARY.md  account-api.md  agent-intelligence-summary.json  agent-prompt.md  certification-and-partnerships.md  comprehensive-community-system.md  cross-chain-development.md  dex-api.md  executive-intelligence-report.md  go-sdk.md  hackathons-and-conferences.md  health-monitoring.md  (+7 more)
docker/: docker-compose.monitoring.yml
docs/: NOCKCHAIN_PROJECT_KNOWLEDGE_OPTIMIZATION.md  SMART_DOCS_QUICK_START.md
handover/: COMPREHENSIVE_ANALYSIS_COMPLETE.md  COMPREHENSIVE_PROJECT_STATUS_SUMMARY.md  DOCUMENTATION_INDEX.md  ENTERPRISE_VALIDATION_COMPLETE.md  VERIFICATION_PROTOCOL_COMPLETE.md  final-project-summary.md  frontend-deployment-complete.md  handover-verification-report.md  hybrid-workflow-complete.md  lightning_ai_migration_summary.md  master-project-documentation.md  nockchain-refined-branding-handover.md  project-status-verification.md  session_summary_20250718_0550.md  session_summary_20250718_1200.md  session_summary_20250718_1220.md
k8s/: configmap.yaml  ingress.yaml  mining-pool.yaml  monitoring.yaml  namespace.yaml  postgres.yaml  rbac.yaml  redis.yaml  secrets.yaml  web-app.yaml
nockchain-frontend/: README.md  package-lock.json  package.json  tailwind.config.js
research/: AUTONOMOUS_AGENT_DEPLOYMENT_SUMMARY.md  README.md
scripts/: deploy-nockchain-frontend.sh  deploy-optimizations.sh  deploy.sh  start-revenue-system.sh  sync-to-lightning.sh
sql/: init-revenue-db.sql
tests/: minimal.test.js
(+343 files in other folders)
