[package]
name = "nock-analytics"
version = "0.1.0"
edition = "2021"
description = "NOCK Analytics Dashboard with Proof Power Trends and Advanced Metrics"
authors = ["NOCK Team"]
license = "MIT"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
hyper = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp"] }

# Metrics and monitoring
prometheus = "0.13"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Data processing
polars = { version = "0.36", features = ["lazy", "temporal", "strings"] }
ndarray = "0.15"
nalgebra = "0.32"

# Statistics and ML
statrs = "0.16"
smartcore = { version = "0.3", features = ["nalgebra"] }
candle-core = "0.3"
candle-nn = "0.3"

# Visualization data
plotters = "0.3"
resvg = "0.37"

# Crypto and blockchain
blake3 = "1.4"
sha2 = "0.10"

# Networking
reqwest = { version = "0.11", features = ["json"] }
tungstenite = "0.19"
tokio-tungstenite = "0.19"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
base64 = "0.21"
hex = "0.4"

# Performance
rayon = "1.7"
crossbeam = "0.8"

# Configuration
config = "0.13"
clap = { version = "4.0", features = ["derive"] }

# Template engine
askama = "0.12"
askama_axum = "0.4"

[build-dependencies]