[package]
name = "nock-testing"
version = "0.1.0"
edition = "2021"
description = "Comprehensive Testing and Validation Suite for NOCK Ecosystem"
authors = ["NOCK Team"]
license = "MIT"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full", "test-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }

# Testing framework
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
quickcheck = "1.0"
mockall = "0.11"

# HTTP testing
reqwest = { version = "0.11", features = ["json"] }
wiremock = "0.5"

# Database testing
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "chrono", "uuid"] }
testcontainers = "0.14"

# Crypto testing
blake3 = "1.4"
sha2 = "0.10"
secp256k1 = "0.27"

# Performance testing
pprof = { version = "0.12", features = ["criterion"] }
flamegraph = "0.6"

# Integration testing
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"

# Load testing
goose = "0.17"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
base64 = "0.21"
hex = "0.4"
rand = "0.8"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Configuration
config = "0.13"

[dev-dependencies]
# Additional test utilities
rstest = "0.18"
serial_test = "3.0"
insta = "1.31"

[[bench]]
name = "nock_benchmarks"
harness = false

[features]
default = []
integration-tests = []
load-tests = []
performance-tests = []