[package]
name = "performance-optimizer"
version = "0.1.0"
edition = "2021"
description = "Advanced Performance Optimization Engine for Nockchain Platform"
authors = ["Nockchain Team"]
license = "MIT"

[lib]
name = "performance_optimizer"
path = "src/lib.rs"

[[bin]]
name = "performance-optimizer"
path = "src/main.rs"

[dependencies]
# Core performance monitoring
tokio = { version = "1.0", features = ["full", "tracing"] }
tokio-metrics = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }

# Performance profiling and monitoring
perf-event = "0.4"
pprof = { version = "0.12", features = ["flamegraph", "protobuf-codec", "frame-pointer"] }
criterion = { version = "0.5", features = ["html_reports"] }
flamegraph = "0.6"

# System monitoring
sysinfo = "0.30"
procfs = "0.16"
libc = "0.2"

# Memory optimization
tikv-jemallocator = { version = "0.5", optional = true }

# Database optimization
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
deadpool-postgres = "0.12"
deadpool-redis = "0.14"

# HTTP performance
hyper = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "compression-br", "compression-gzip", "trace"] }

# Cache optimization
moka = { version = "0.12", features = ["future"] }
arc-swap = "1.6"

# Compression
zstd = "0.13"
lz4 = "1.24"
brotli = "3.4"

# Parallel processing
rayon = "1.7"
crossbeam = "0.8"
dashmap = "5.5"

# Networking optimization
socket2 = "0.5"
nix = "0.27"

# Metrics and observability
prometheus = "0.13"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry = "0.21"
opentelemetry-jaeger = "0.20"

# Configuration
config = "0.13"
clap = { version = "4.0", features = ["derive"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
once_cell = "1.19"
parking_lot = "0.12"

[features]
default = ["jemalloc"]
jemalloc = ["tikv-jemallocator"]
profiling = ["pprof/criterion"]

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[profile.bench]
debug = true