[package]
name = "revenue-engine"
version = "1.0.0"
edition = "2021"
authors = ["Nockchain Team <dev@nockchain.com>"]
description = "Enterprise Revenue Engine - $2M+ Monthly Revenue Activation System"

[lib]
name = "revenue_engine"
path = "src/lib.rs"

[[bin]]
name = "revenue-server"
path = "src/main.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"

# Web framework and HTTP
axum = { version = "0.7", features = ["macros", "headers"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }
hyper = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "bigdecimal"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Data types
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.33", features = ["serde-with-str"] }

# Cryptography and security
ring = "0.17"
argon2 = "0.5"
jsonwebtoken = "9.0"
aes-gcm = "0.10"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Metrics and monitoring
prometheus = "0.13"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Background jobs
tokio-cron-scheduler = "0.9"

# Payment processing
stripe-rust = { version = "0.25", features = ["async"] }

# Email
lettre = { version = "0.11", features = ["tokio1-rustls-tls"] }

# Validation
validator = { version = "0.16", features = ["derive"] }

# Rate limiting
governor = "0.6"

# Blockchain integration
solana-sdk = "1.17"
solana-client = "1.17"
spl-token = "4.0"

# Machine learning
candle-core = "0.3"
candle-nn = "0.3"

# Enterprise features
kafka = "0.9"
elasticsearch = "8.5"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"
assert_matches = "1.5"