[package]
name = "nock-bridge"
version = "1.0.0"
description = "Military-grade NOCK ↔ Solana bridge smart contracts"
edition = "2021"
license = "MIT"
authors = ["Nockchain Development Team"]

[lib]
crate-type = ["cdylib", "lib"]
name = "nock_bridge"

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.2.0", features = ["no-entrypoint"] }
solana-program = "1.17.0"
borsh = "0.10.3"
arrayref = "0.3.7"
num-derive = "0.4.1"
num-traits = "0.2.17"
pyth-sdk-solana = "0.10.1"
switchboard-v2 = "0.4.0"

[dev-dependencies]
solana-program-test = "1.17.0"
solana-sdk = "1.17.0"
tokio = "1.35.0"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
testing = []